Add class AutoSMSEMOAPermutation